<resources>
    <string name="com.crashlytics.android.build_id" translatable="false">1</string>
    <string name="app_name">Daily Plan</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="titlte_task">Daily meeting</string>
    <string name="create">Create</string>
    <string name="new_task">New task .....</string>
    <string name="today">Today</string>
    <string name="time">Time</string>
    <string name="reminder">Reminder</string>
    <string name="desscription">Description here ...</string>
    <string name="update">Update</string>
    <string name="task_updated">Task updated successfully</string>
    <string name="task_deleted">Task deleted successfully</string>
    <string name="add_task_success">Task added successfully</string>
    <string name="all_time">All time</string>
    <string name="congratulation_done_task">Congratulations on completing all the task. Keep it up</string>
    <string name="no_task">No task for selected date! Add now</string>
    <string name="policy">Privacy Policy</string>
    <string name="notify_app">Notification</string>
    <string name="time_reminder_create_plan">Remind new plan at </string>
    <string name="summary">Summary</string>
    <string name="statical">Statistical</string>
    <string name="remind_task">Remind task before </string>
    <string name="setting">Setting</string>
    <string name="remind_task_start_after"> will start in </string>
    <string name="effective_plan">Effective planning</string>
    <string name="effective_plan_des">Take some time to plan for today!</string>
    <string name="reminder_sound">Enable sound notify</string>
    <string name="service_running"> remind tasks for you 😜</string>
    <string name="minutes">minutes</string>
    <string name="congratulation_done_task_to_now">You have completed %s missions today! Hang in there, you\'re almost done!" </string>
    <string name="congratulation">Congratulation</string>
    <string name="title_notify_saturday">Get ready for a productive week!</string>
    <string name="notify_saturday">Tap here to set your goals and organize your tasks with Daily Plan. 📅✨</string>
    <string name="title_notify_daily">Ready for Tomorrow?</string>
    <string name="message_notify_daily_task_remind">Tap here to set your tasks and goals with Daily Plan. 📅✨</string>
    <string name="loading_ad">Loading ad ...</string>
    <string name="msg_btn_continue">Continue</string>
    <string name="please_enter_title">Please enter the name of the task</string>
    <string name="msg_language">Language</string>
    <string name="ok">Ok</string>
    <string name="my_age">Your age</string>
    <string name="under18">Under 18</string>
    <string name="age1824">18-24</string>
    <string name="age2435">25-34</string>
    <string name="age3544">35-44\n</string>
    <string name="ageover45">Over 44</string>
    <string name="msg_please_select_age">Please select age to continue</string>
    <string name="how_old_are_you">How old are you ?</string>
    <string name="sub_my_age"><![CDATA[Just one step to personalize your ringtones!]]></string>
    <string name="under_eighteen"><![CDATA[Under 18]]></string>
    <string name="over_forty_five"><![CDATA[Over 45]]></string>
    <string name="eighteen_twenty_four"><![CDATA[18 - 24]]></string>
    <string name="twenty_five_thirty_four"><![CDATA[25 - 34]]></string>
    <string name="thirty_five_forty_four"><![CDATA[35 - 44]]></string>
</resources>