<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F5F6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/containerSetting1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bg_choose_infor_task"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerSetting2">

                <LinearLayout
                    android:id="@+id/btnChooseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/statical"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivDate"
                        android:layout_width="49dp"
                        android:layout_height="49dp"
                        android:padding="10dp"
                        app:srcCompat="@drawable/baseline_date_range_24" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/btnChooseTimeReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTimeReminder"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/remind_task"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivTime"
                        android:layout_width="49dp"
                        android:layout_height="49dp"
                        android:padding="10dp"
                        app:srcCompat="@drawable/baseline_access_time_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvReminder"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/reminder_sound"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swReminderSound"
                        android:layout_width="49dp"
                        android:layout_height="49dp"
                        android:checked="true"
                        android:padding="5dp"
                        app:srcCompat="@drawable/baseline_date_range_24" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerSetting2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bg_choose_infor_task"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSetting">


                <LinearLayout
                    android:id="@+id/btnChooseTimeCreatePlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTimeCreatePlan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/time_reminder_create_plan"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="49dp"
                        android:layout_height="49dp"
                        android:padding="10dp"
                        app:srcCompat="@drawable/baseline_access_time_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/notify_app"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="49dp"
                        android:layout_height="49dp"
                        android:checked="true"
                        android:padding="5dp"
                        app:srcCompat="@drawable/baseline_date_range_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/policy"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="49dp"
                        android:layout_height="49dp"
                        android:padding="10dp"
                        app:srcCompat="@drawable/baseline_local_police_24" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>